--- a/css/game.css
+++ b/css/game.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar {
+@import url("https://wormateserkanconnect.github.io/DV/fonts/font.css"); ::-webkit-scrollbar {
     display: none;
 }
 
