--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 .loading-background {
 	background-size: cover;
-	background: url('https://i.imgur.com/OLzfmSU.jpeg') no-repeat center center;
+	background: url('https:/i./imgur.com/YgwHwnw.png') no-repeat center center;
 	height: 100%;
 	left: 0;
 	opacity: 1;
@@ -12,7 +12,7 @@
 
 #game-wrap {
 	background-color: #d5d2db;
-	background-image: url(https://i.imgur.com/YMWqrYn.jpeg);
+	background-image: url(https://i.imgur.com/rGNW3XP.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 	bottom: 0;
