--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 .loading-background {
 	background-size: cover;
-	background: url('https:/i./imgur.com/YgwHwnw.png') no-repeat center center;
+	background: url('https:/i.imgur.com/YgwHwnw.png') no-repeat center center;
 	height: 100%;
 	left: 0;
 	opacity: 1;
