--- a/css/game.css
+++ b/css/game.css
@@ -4299,11 +4299,14 @@ button {
     border-radius: 5px;
     border: 1px solid #f1f1e7;
     color: #fff;
-    /* font-family: HelveticaNeueLT; */
+    font-family: HelveticaNeueLT;
     font-size: 17px;
     font-weight: 400;
+    margin-top: 0px;
     font-family: 'HelveticaNeueLT', sans-serif;
 }
+
+button {}
 
 button#buy-premium {
     background: #030b11;
@@ -4328,10 +4331,15 @@ button:hover {
     font-size: 20px;
     font-weight: bold;
     height: 40px;
-    line-height: 1.9;
+    line-height: 0.9;
     padding-left: 10px;
     text-align: left;
     text-transform: uppercase;
+    width: 71px;
+    float: right;
+    text-align: center;
+    margin-top: 2px;
+    border-radius: 14px;
 }
 
 .hg {
@@ -4368,7 +4376,7 @@ button:hover {
     position: absolute;
     text-align: center;
     text-shadow: 0 0 0 #ffffff, 0 0 0.5em #ff00bc, 0 0 0.4em #ffffff;
-    top: 25px;
+    top: 77px;
     width: 210px;
 }
 
@@ -4743,6 +4751,10 @@ c {}
     display: inline-block;
     padding: 10px 20px;
     text-align: center;
+    background: url(https://i.imgur.com/bM49y0C.png);
+    height: 12px;
+    background-repeat: no-repeat;
+    transform: scale(-1, 1);
 }
 
 .user-id-display {
@@ -4793,6 +4805,7 @@ div#kich-hoat {
 
 .settings-labelZoom {
     margin-right: 10px;
+    font-size: 12px;
 }
 
 .left-column,
@@ -4965,13 +4978,15 @@ button#buy-premium {
 
 .background-container {
     height: 100px;
+    border-radius: 12px;
 }
 
 .background-container img {
-    border-radius: 5px;
+    border-radius: 4px;
     height: 40px;
     margin: 1px;
     width: 70px;
+    padding: 4px;
 }
 
 .selectSala {
@@ -5015,6 +5030,7 @@ button#buy-premium {
     overflow-y: auto;
     padding: 20px;
     position: fixed;
+    width: 501px;
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
